introduce model subclassing concepts, a custom classifier model.

--- a/cap7/functional_api.ipynb
+++ b/cap7/functional_api.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bc8858c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "import os\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'  # Suppress TensorFlow info and warning messages\n",
+    "warnings.filterwarnings('ignore', category=DeprecationWarning)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "228c326f",
    "metadata": {},
@@ -501,10 +514,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "f830b012",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 10ms/step - accuracy: 0.2937 - categorical_crossentropy_loss: 31.1573 - loss: 31.4721 - mean_absolute_error: 0.4808 - mean_squared_error_loss: 0.3148\n",
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.5664 - categorical_crossentropy_loss: 35.3319 - loss: 35.6525 - mean_absolute_error: 0.4873 - mean_squared_error_loss: 0.3206\n",
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "model.compile(optimizer=\"rmsprop\",\n",
     "    loss=[\"mean_squared_error\", \"categorical_crossentropy\"],\n",
@@ -524,6 +547,97 @@
     "priority_preds, department_preds = model.predict(\n",
     "{\"title\": title_data, \"text_body\": text_body_data, \"tags\": tags_data})\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aca6f44a",
+   "metadata": {},
+   "source": [
+    "The Model subclassing workflow is the most flexible way to build a model. It enables you to build models that cannot be expressed as directed acyclic graphs of layersimagine, for instance, a model where the call() method uses layers inside a for loop, or even calls them recursively. Anything is possible—you’re in charge."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1c345d8",
+   "metadata": {},
+   "source": [
+    "Functional and subclassed models are also substantially different in nature. A Functional model is an explicit data structure—a graph of layers, which you can view, inspect, and modify. A subclassed model is a piece of bytecode—a Python class with a call() method that contains raw code. This is the source of the subclassing workflow’s flexibility—you can code up whatever functionality you like—but it introduces new limitations. For instance, because the way layers are connected to each other is hidden inside the body of the call() method, you cannot access that information. Calling summary() will not display layer connectivity, and you cannot plot the model topology via plot_model(). Likewise, if you have a subclassed model, you cannot access the nodes of the graph of layers to do feature extraction because there is simply no graph. Once the model is instantiated, its forward pass becomes a complete black box."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f4d7ceb",
+   "metadata": {},
+   "source": [
+    "### 7.2.4 Mixing and matching different components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "860b0bb5",
+   "metadata": {},
+   "source": [
+    "you can use a subclassed layer or model in a Functional model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "10a23203",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Classifier(keras.Model):\n",
+    "    def __init__(self, num_classes=2):\n",
+    "        super().__init__()\n",
+    "        #se é classficiacao binaria ou multiclasse\n",
+    "        if num_classes ==2: \n",
+    "            num_units = 1\n",
+    "            activation = \"sigmoid\"\n",
+    "        else:\n",
+    "            num_units = num_classes\n",
+    "            activation = \"softmax\"\n",
+    "\n",
+    "        self.dense = layers.Dense(num_units, activation=activation)\n",
+    "    def call(self, inputs):\n",
+    "        return self.dense(inputs)\n",
+    "\n",
+    "inputs = keras.Input(shape=(3,))\n",
+    "features = layers.Dense(64, activation=\"relu\") (inputs)\n",
+    "outputs = Classifier(num_classes=10) (features)\n",
+    "model = keras.Model(inputs=inputs, outputs=outputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "027c419a",
+   "metadata": {},
+   "source": [
+    "Inversely, you can use a Functional model as part of a subclassed layer or model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ae734b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = keras.Input(shape=(64,))\n",
+    "outputs = layers.Dense(1, activation=\"sigmoid\")(inputs) \n",
+    "binary_classifier = keras.Model(inputs=inputs, outputs=outputs)\n",
+    "\n",
+    "class MyModel(keras.Model):\n",
+    "    def __init__(self, num_classes=2):\n",
+    "        super().__init__()\n",
+    "        self.dense = layers.Dense(64, activation=\"relu\")\n",
+    "        self.classifier = binary_classifier  \n",
+    "    \n",
+    "    def call(self, inputs): \n",
+    "        features = self.dense(inputs) \n",
+    "        return self.classifier(features)  \n",
+    "model = MyModel()"
    ]
   }
  ],
