built-in training and evaluation loops, implemented example of use of curtom metrics: custom Root Mean Squared Error.

--- a/cap7/functional_api.ipynb
+++ b/cap7/functional_api.ipynb
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6ae734b2",
    "metadata": {},
    "outputs": [],
@@ -638,6 +638,179 @@
     "        features = self.dense(inputs) \n",
     "        return self.classifier(features)  \n",
     "model = MyModel()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c7d1049",
+   "metadata": {},
+   "source": [
+    "### 7.3 Using built-in training and evaluation loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "eb49adc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - accuracy: 0.9117 - loss: 0.2964 - val_accuracy: 0.9565 - val_loss: 0.1499\n",
+      "Epoch 2/3\n",
+      "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 3ms/step - accuracy: 0.9528 - loss: 0.1647 - val_accuracy: 0.9678 - val_loss: 0.1123\n",
+      "Epoch 3/3\n",
+      "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 3ms/step - accuracy: 0.9637 - loss: 0.1292 - val_accuracy: 0.9704 - val_loss: 0.1081\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.9734 - loss: 0.1041\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 855us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keras\n",
+    "from keras import layers\n",
+    "from keras.datasets import mnist\n",
+    "\n",
+    "def get_mnist_model():\n",
+    "    inputs = keras.Input(shape=(28*28,))\n",
+    "    features = layers.Dense(512, activation=\"relu\")(inputs)\n",
+    "    features = layers.Dropout(0.5) (features)\n",
+    "    outputs = layers.Dense(10, activation=\"softmax\") (features)\n",
+    "\n",
+    "    model = keras.Model(inputs, outputs)\n",
+    "    return model\n",
+    "\n",
+    "(images, labels), (test_images, test_labels) = mnist.load_data()\n",
+    "images = images.reshape((60000, 28*28)).astype(\"float32\") / 255 \n",
+    "test_images = test_images.reshape((10000, 28*28)).astype(\"float32\") / 255 \n",
+    "train_images, val_images = images[10000:], images[:10000]\n",
+    "train_labels, val_labels = labels[10000:], labels[:10000]\n",
+    "\n",
+    "model = get_mnist_model()\n",
+    "model.compile(optimizer=\"rmsprop\",\n",
+    "            loss=\"sparse_categorical_crossentropy\",\n",
+    "            metrics=[\"accuracy\"])\n",
+    "model.fit(train_images, train_labels,\n",
+    "        epochs=3,\n",
+    "        validation_data=(val_images,val_labels))\n",
+    "#compute loss and metrics on new data\n",
+    "test_metrics = model.evaluate(test_images, test_labels)\n",
+    "#compute classification probabilities on new data\n",
+    "predictions = model.predict(test_images)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5bf171a",
+   "metadata": {},
+   "source": [
+    "There are a couple of ways you can customize this simple workflow: \n",
+    "- Provide your own custom metrics.\n",
+    "- Pass callbacks to the fit() method to schedule actions to be taken at specific points during training."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be863f81",
+   "metadata": {},
+   "source": [
+    "### 7.3.1 Writing your own metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f5ca79ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "class RootMeanSquaredError(keras.metrics.Metric):\n",
+    "    #Define the state  variables in the  constructor.\n",
+    "    #Like for layers, you  have access to  the add_weight() method.\n",
+    "    def __init__(self, name=\"rmse\", **kwargs):\n",
+    "        super().__init__(name=name, **kwargs)\n",
+    "        self.mse_sum = self.add_weight(name=\"mse_sum\", initializer=\"zeros\")\n",
+    "        self.total_samples = self.add_weight(\n",
+    "            name=\"total_samples\", initializer=\"zeros\", dtype=\"int32\"\n",
+    "        )\n",
+    "\n",
+    "    #implement the state update logic in update_state(). the y_true argument\n",
+    "    #is the targets for one batch, while y_pred represents the\n",
+    "    # corresponding predicitons from the model. \n",
+    "    # sample_weights wont be used here \n",
+    "    def update_state(self, y_true, y_pred, sample_weight=None):\n",
+    "    #to match our MNIST modal,we expect categorical predicitons and integer labels\n",
+    "        y_true = tf.one_hot(y_true, depth=tf.shape(y_pred)[1])\n",
+    "        mse = tf.reduce_sum(tf.square(y_true - y_pred))\n",
+    "        self.mse_sum.assign_add(mse)\n",
+    "        num_samples = tf.shape(y_pred) [0]\n",
+    "        self.total_samples.assign_add(num_samples)\n",
+    "    #You use the result() method to return the current value of the metric:\n",
+    "    def result(self):\n",
+    "        return tf.sqrt(self.mse_sum / tf.cast(self.total_samples, tf.float32))\n",
+    "\n",
+    "    #Meanwhile, you also need to expose a way\n",
+    "    #  to reset the metric state without\n",
+    "    #  having to reinstantiate it—this\n",
+    "    #  enables the same metric objects to be\n",
+    "    #  used across different epochs of training \n",
+    "    # or across both training and evaluation.\n",
+    "    def reset_state(self):\n",
+    "        self.mse_sum.assign(0.)\n",
+    "        self.total_samples.assign(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "677470eb",
+   "metadata": {},
+   "source": [
+    "Custom metrics can be used just like built-in ones. Let’s test-drive our own metric:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1321519f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - accuracy: 0.9115 - loss: 0.2984 - rmse: 0.3652 - val_accuracy: 0.9590 - val_loss: 0.1416 - val_rmse: 0.2493\n",
+      "Epoch 2/3\n",
+      "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 3ms/step - accuracy: 0.9540 - loss: 0.1625 - rmse: 0.2666 - val_accuracy: 0.9667 - val_loss: 0.1159 - val_rmse: 0.2254\n",
+      "Epoch 3/3\n",
+      "\u001b[1m1563/1563\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - accuracy: 0.9632 - loss: 0.1302 - rmse: 0.2393 - val_accuracy: 0.9689 - val_loss: 0.1095 - val_rmse: 0.2152\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.9707 - loss: 0.1067 - rmse: 0.2133\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = get_mnist_model()\n",
+    "model.compile(optimizer=\"rmsprop\",\n",
+    "            loss=\"sparse_categorical_crossentropy\",\n",
+    "            metrics=[\"accuracy\", RootMeanSquaredError()])\n",
+    "    \n",
+    "model.fit(train_images, train_labels,\n",
+    "        epochs=3,\n",
+    "        validation_data=(val_images, val_labels))\n",
+    "test_metrics = model.evaluate(test_images, test_labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d21d4765",
+   "metadata": {},
+   "source": [
+    "### 7.3.2 Using callbacks"
    ]
   }
  ],
