--- a/cap8/computer_vision_introduction.ipynb
+++ b/cap8/computer_vision_introduction.ipynb
@@ -217,6 +217,14 @@
    "source": [
     "como podemos ver, a rede convolucional possui uma acurárcia muito maior que a rede densa."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47167eed",
+   "metadata": {},
+   "source": [
+    "### 8.1.1 The convolution operation"
+   ]
   }
  ],
  "metadata": {
