modelo de segmentação semantica completo

--- a/cap9/introduction.ipynb
+++ b/cap9/introduction.ipynb
@@ -362,7 +362,31 @@
     "In image segmentation, we need to:\n",
     "\n",
     "Analyze the image (downsample to understand features)\n",
-    "Reconstruct the segmentation mask (upsample back to original size"
+    "Reconstruct the segmentation mask (upsample back to original size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68735be7",
+   "metadata": {},
+   "source": [
+    "#### The proccess:\n",
+    "Original Image (200x200)\n",
+    "\n",
+    "    ↓ (downsample)\n",
+    "\n",
+    "Feature Maps (25x25) - \"What's in the image?\"\n",
+    "\n",
+    "    ↓ (upsample) \n",
+    "\n",
+    "Segmentation Mask (200x200) - \"Where is each pixel?\"\n",
+    "\n",
+    "#### Real-world analogy:\n",
+    "Downsampling: Like looking at a photo from far away to \n",
+    "understand the overall scene\n",
+    "\n",
+    "\n",
+    "Upsampling: Like zooming back in to identify exactly where each object is located"
    ]
   },
   {
@@ -390,15 +414,20 @@
     "\tx = layers.Conv2DTranspose(256, 3, activation=\"relu\", padding=\"same\")(x)\n",
     "\tx = layers.Conv2DTranspose( 256, 3, activation=\"relu\",\n",
     "\t\t\t\t\t\t\tpadding=\"same\", strides=2)(x)\n",
-    "\tx = layers.Conv2D(128, 3, activation=\"relu\", padding=\"same\")(x)\n",
-    "\tx = layers.Conv2DTranspose(128, 3, activation=\"relu\",\n",
-    "\t\t\t\t\t\t\tpadding=\"same\", strides=2)(x)\n",
-    "\tx = layers.Conv2D(64, 3, activation=\"relu\", padding=\"same\")(x)\n",
-    "\tx = layers.Conv2DTranspose(64, 3, activation=\"relu\",\n",
-    "\t\t\t\t\t\t\tpadding=\"same\", strides=2)(x)\n",
+    "\tx = layers.Conv2DTranspose(128, 3, activation=\"relu\", padding=\"same\")(x)\n",
+    "\tx = layers.Conv2DTranspose(128, 3, activation=\"relu\", padding=\"same\", strides=2)(x)\n",
+    "\tx = layers.Conv2DTranspose(64, 3, activation=\"relu\", padding=\"same\")(x)\n",
+    "\tx = layers.Conv2DTranspose(64, 3, activation=\"relu\", padding=\"same\", strides=2)(x)\n",
     "\n",
+    "\t#we end the model with a per-pixel three-way softmax to classify\n",
+    "\t#each output piixel into one of our three classes.\n",
+    "\toutputs = layers.Conv2D(num_classes, 3, activation=\"softmax\", padding=\"same\")(x)\n",
     "\n",
-    "\n"
+    "\tmodel = keras.Model(inputs=inputs, outputs=outputs)\n",
+    "\treturn model\n",
+    "\n",
+    "model = get_model(img_size=img_size, num_classes=3)\n",
+    "model.summary()"
    ]
   }
  ],
