add cometnarios e finalizado capitulo 9 com implementação de CAM

--- a/cap9/what_convets_learn.ipynb
+++ b/cap9/what_convets_learn.ipynb
@@ -1320,10 +1320,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "377c0a88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved at elephant_cam.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ryanz\\AppData\\Local\\Temp\\ipykernel_21836\\4007726995.py:9: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "  jet = cm.get_cmap(\"jet\")\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.cm as cm\n",
     "\n",
@@ -1332,24 +1348,48 @@
     "\n",
     "heatmap = np.uint8(heatmap * 255)\n",
     "\n",
+    "#Use jet colormap to colorize heatmap\n",
     "jet = cm.get_cmap(\"jet\")\n",
     "\n",
+    "#Use RGB values of the colormap\n",
     "jet_colors = jet(np.arange(256))[:, :3]\n",
     "jet_heatmap = jet_colors[heatmap]\n",
     "\n",
+    "#Create an image  that contains the  recolorized heatmap.\n",
     "jet_heatmap = keras.utils.array_to_img(jet_heatmap)\n",
     "jet_heatmap = jet_heatmap.resize((img.shape[1], img.shape[0]))\n",
     "jet_heatmap = keras.utils.img_to_array(jet_heatmap)\n",
     "\n",
+    "#Superimpose the  heatmap and the  original image,  with the heatmap  at 40% opacity.\n",
     "superimposed_img = jet_heatmap * 0.4 + img\n",
     "superimposed_img = keras.utils.array_to_img(superimposed_img)\n",
     "\n",
     "save_path = \"elephant_cam.jpg\"\n",
     "superimposed_img.save(save_path)\n",
     "\n",
-    "print(f\"saved at {save_path}\")\n",
-    "\n",
-    "\n"
+    "print(f\"saved at {save_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1030c74e",
+   "metadata": {},
+   "source": [
+    "### This visualization technique answers two important questions: \n",
+    "- Why did the network think this image contained an African elephant?\n",
+    "- Where is the African elephant located in the picture?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b35371a",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "- There are three essential computer vision tasks you can do with deep learning: image classification, image segmentation, and object detection.\n",
+    "- Following modern convnet architecture best practices will help you get the most out of your models. Some of these best practices include using residual connections, batch normalization, and depthwise separable convolutions.\n",
+    "- The representations that convnets learn are easy to inspect—convnets are the opposite of black boxes!\n",
+    "- You can generate visualizations of the filters learned by your convnets, as well as heatmaps of class activity."
    ]
   }
  ],
