modelo de usando layer de long short term memory para demonstração (se mostrou mais eficiente e alcançou o common-sense baseline para o problema

--- a/cap10/introduction.ipynb
+++ b/cap10/introduction.ipynb
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "686b3d97",
    "metadata": {},
    "outputs": [
@@ -876,14 +876,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e8cc02bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# an RNN layer that can process sequences of any length:\n",
     "num_features = 14\n",
-    "inputs = keras.Input(shape=(None, num_features))"
+    "inputs = keras.Input(shape=(None, num_features))\n",
+    "outputs = layers.SimpleRNN(16) (inputs)"
    ]
   }
  ],
